# DataEngineeringZoomcamp

./: .gitignore  LICENSE  README.md  pyproject.toml
Module1/: pyproject.toml
Module1/pipeline/: ingest_data.py  loadSchema.yaml  notebook.ipynb  pipeline.py  pyproject.toml
Module1/test/: file1.txt
Module2/: .terraform.lock.hcl  HomeworkSolutions.sql  README.md  docker-compose.yml  main.tf  pyproject.toml  variables.tf
Module3/: bigQuerySQL.sql  pyproject.toml  yellowDataIngestion.py
Module4/: README.md
Module4/ny_taxi_data/: dbt_project.yml  packages.yml
Module4/ny_taxi_data/macros/: get_payment_type_description.sql  get_trip_duration_minutes.sql  get_vendor_data.sql  get_vendor_names.sql  macros_properties.yml  safe_cast.sql
Module4/ny_taxi_data/models/example/: my_first_dbt_model.sql
Module4/ny_taxi_data/models/marts/: dim_vendors.sql  dim_zones.sql  fct_trips.sql  schema.yaml
Module4/ny_taxi_data/models/marts/reporting/: anotherCount.sql  count.sql  fct_monthy_zone_revenue.sql  ftc_monthly_revenue.sql  monthly_revenue_per_locations.sql  schema.yaml
Module4/ny_taxi_data/models/staging/: schema.yml  sources.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql  test.sql
Module4/ny_taxi_data/seeds/: payment_type_lookup.csv  seeds_properties.yml
Module5/: README.md
Module5/my-pipeline/: README.md
Module5/my-pipeline/pipeline/: pipeline.yml
pipeline/: Dockerfile  dbContainerGeneration.sh  docker-compose.yaml  ingest_data.py  notebook.ipynb  solutionQueries.sql
test/: file2.txt  list_files.py
(+5 files in other folders)
