[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.10.19",
    "google-api-core>=2.29.0",
    "google-cloud-storage>=3.9.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]



[tool.uv.workspace]
members = ["Module1", "Module2", "Module3"]
